# autorl

./: LICENSE  README.md  advantage_ac.py  config.json  pyproject.toml  setup.py  test.py  train.py  utils.py
.github/workflows/: autorl-pullrequest-pytest.yml
autorl/: agents.py  base.py  train.py
autorl/agents/: base.py  value.py
autorl/tests/: utils.py
autorl/tests/integration/: test_value.py
deepRL/: setup.py
deepRL/nn/: test.py
deeprl/: agents.py  test.py
deeprl/nn/: nn.py  test.py  tf_utils.py
drl/: agents.py
nn/: config_parse.py  conv.py  mlp.py  nn.py  tf_utilities.py  tf_utils.py
nn_utilities/: tf_utilities.py
src/autorl/: train.py
src/autorl/agents/: base.py  value.py
src/autorl/tests/integration/agents/: test_value.py
src/autorl/tests/unit/agents/: test_value.py
