[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorl"
authors = [{name = "Andrew West"}]
version = "0.0.1"
description = "Gym agents"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.7"
dependencies = [
    "tensorflow",
    "nets",
    "gym",
    "pytest"
]